--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,10 @@ server.port=8080
 #spring.jpa.properties.hibernate.format_sql=true
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/lib
+spring.datasource.url=jdbc:postgresql://ballast.proxy.rlwy.net:18596/railway
 spring.datasource.username=postgres
-spring.datasource.password=2003
+spring.datasource.password=rJooqhIsNeUTDXoVsUzNOaCjTvkukXos
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate sozlamalari
@@ -26,14 +27,16 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tuychievsamandar12@gmail.com
-spring.mail.password=xflgwnsryahbhncc
+spring.mail.password=ssvs hgrk ktgd kshp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+bot.token=7579581124:AAEMHcaPjLfvhvmiNshevD7s2omEDdQeJos
+bot.name=kutubxonaOnlineBot
